# redforge

./: .gitignore  .pre-commit-config.yaml  BUILD_STATUS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  RESEARCH_LOG.md  SECURITY.md  TASKS.md  pyproject.toml  redforge.profiles.yaml.example  redforge.yaml.example
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docker/: Dockerfile  docker-compose.yml
docs/research/: attack_taxonomy.md  landscape_analysis.md
platform/: .env.local.example  DUMMY_VALUES.md  middleware.ts  package-lock.json  package.json  tailwind.config.ts
redforge/: __init__.py
redforge/adapters/: __init__.py  adapter_config.py  anthropic_adapter.py  azure_adapter.py  base.py  bedrock_adapter.py  factory.py  gemini_adapter.py  generic_rest_adapter.py  huggingface_adapter.py  mistral_adapter.py  model_catalog.py  ollama_adapter.py  openai_adapter.py  profiles.py
redforge/api/: app.py  auth.py  models.py
redforge/attacks/: __init__.py  crescendo.py  multi_turn.py  pair.py  skeleton_key.py
redforge/benchmarks/: __init__.py  runner.py
redforge/cli/: commands.py
redforge/compliance/: __init__.py  framework_loader.py  mappings.py
redforge/config/: __init__.py  runner.py
redforge/core/: constants.py  orchestrator.py  scorer.py  session.py
redforge/datasets/: __init__.py  loader.py
redforge/detectors/: __init__.py  base.py  code_detector.py  keyword.py  refusal.py  regex_detector.py  similarity_detector.py  unsafe_content.py  yara_scanner.py
redforge/guardrails/: __init__.py  base.py  input_scanners.py  output_scanners.py
redforge/mutations/: __init__.py  engine.py
redforge/probes/: __init__.py  agentic_escalation.py  ansi_escape.py  api_key_probe.py  base.py  bias_elicitation.py  brand_safety.py  canary_token.py  context_window_attack.py  continuation_attack.py  dan_jailbreak.py  data_poisoning.py  do_not_answer.py  embedding_weakness.py  encoding_bypass.py  excessive_agency.py  gcg_suffix.py  glitch_tokens.py  grandma_exploit.py  hallucination.py  improper_output.py  indirect_injection.py  known_bad_signatures.py  malware_generation.py  many_shot.py  mcp_tool_poisoning.py  medical_safety.py  misinformation.py  multilingual_bypass.py  output_format_exploit.py  package_hallucination.py  pii_extraction.py  prompt_injection.py  rag_faithfulness.py  rag_poisoning.py  repetition_divergence.py  robustness.py  roleplay_bypass.py  sensitive_disclosure.py  session_leakage.py  (+10 more)
redforge/reporters/: __init__.py  audit_reporter.py  base.py  failures_reporter.py  html_reporter.py  json_reporter.py  markdown_reporter.py  sarif_reporter.py
redforge/scoring/: __init__.py  judge.py  scorers.py
redforge/utils/: rate_limiter.py  secrets.py
tests/: conftest.py
tests/integration/: test_api.py  test_cli.py
tests/unit/: test_adapters.py  (+3 more)
website/: consulting.html  index.html  vercel.json
(+50 files in other folders)
