[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "redforge"
version = "0.1.0"
description = "Production-grade LLM Red Teaming & Vulnerability Scanning platform"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "RedForge Contributors" }]
keywords = ["llm", "security", "red-teaming", "vulnerability-scanning", "ai-safety", "owasp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # CLI
    "typer>=0.12.0,<1.0",
    "rich>=13.7.0,<14.0",
    # API
    "fastapi>=0.111.0,<1.0",
    "uvicorn[standard]>=0.29.0,<1.0",
    "slowapi>=0.1.9,<1.0",
    # Data validation
    "pydantic>=2.7.0,<3.0",
    "pydantic-settings>=2.2.0,<3.0",
    # HTTP
    "httpx>=0.27.0,<1.0",
    # Secrets / env
    "python-dotenv>=1.0.0,<2.0",
    # Utilities
    "tenacity>=8.3.0,<10.0",
    "click>=8.1.0,<9.0",
]

[project.optional-dependencies]
openai = ["openai>=1.30.0,<2.0"]
anthropic = ["anthropic>=0.28.0,<1.0"]
gemini = ["google-generativeai>=0.7.0,<1.0"]
bedrock = ["boto3>=1.34.0,<2.0"]
mistral = ["mistralai>=0.4.0,<1.0"]
all-providers = [
    "openai>=1.30.0,<2.0",
    "anthropic>=0.28.0,<1.0",
    "google-generativeai>=0.7.0,<1.0",
    "boto3>=1.34.0,<2.0",
    "mistralai>=0.4.0,<1.0",
]
dev = [
    "pytest>=8.2.0,<9.0",
    "pytest-asyncio>=0.23.0,<1.0",
    "pytest-cov>=5.0.0,<6.0",
    "httpx>=0.27.0,<1.0",
    "ruff>=0.4.0,<1.0",
    "mypy>=1.10.0,<2.0",
    "pip-audit>=2.7.0,<3.0",
    "pip-licenses>=4.4.0,<5.0",
    "detect-secrets>=1.5.0,<2.0",
    "pre-commit>=3.7.0,<4.0",
]

[project.scripts]
redforge = "redforge.cli.commands:app"

[project.urls]
Homepage = "https://github.com/redforge/redforge"
Documentation = "https://github.com/redforge/redforge/blob/main/README.md"
Repository = "https://github.com/redforge/redforge"
Issues = "https://github.com/redforge/redforge/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["redforge*"]

[tool.ruff]
target-version = "py310"
line-length = 100
[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "T20"]
ignore = ["S101", "S603", "S607", "B008", "A002", "E501", "S104"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=redforge --cov-report=term-missing"

[tool.coverage.run]
omit = ["tests/*"]
